--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -25,7 +25,7 @@ security:
       provider: app_user_provider
       custom_authenticator: App\Security\LoginFormAuthenticator
       logout:
-        path: app_logout
+        path: /logout
         invalidate_session: false
         # where to redirect after logout
         target: home
