--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,8 +1,12 @@
 #index:
-#    path: /
-#    controller: App\Controller\DefaultController::index
+#  path: /{wildcard}
+#  controller: App\Controller\BaseController::index
+#  requirements:
+#    wildcard: .*
 logout:
   path: /logout
+apiplatform:
+  path: /apiplatform
 dashboard:
   path: /admin
   controller: App\Controller\Admin\DashboardController::index
