--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -15,3 +15,8 @@ vich_uploader:
             uri_prefix: /uploads/images/original
             upload_destination: '%kernel.project_dir%/public/uploads/images/original'
             namer: Vich\UploaderBundle\Naming\UniqidNamer
+
+        dev_documentation:
+            uri_prefix: /uploads/devFiles
+            upload_destination: '%kernel.project_dir%/public/uploads/devFiles'
+            namer: Vich\UploaderBundle\Naming\UniqidNamer
