--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,7 +5,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
     app.path.model_images: /uploads/images/models
-    dev_file_directory: '%kernel.project_dir%/public/uploads/devFiles'
+    app.path.dev_documentation: /uploads/devFiles
 
 services:
     # default configuration for services in *this* file
