--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
         "axios": "^0.21.1",
         "bootstrap": "^5.1.0",
         "bootstrap-vue": "^2.21.2",
+        "jquery": "^3.6.0",
         "nprogress": "^0.2.0",
         "sass": "^1.38.2",
         "sass-loader": "^12.1.0",
+        "select2": "^4.1.0-rc.0",
         "vue": "^2.6.14",
         "vue-loader": "^15.9.8",
         "vue-router": "^3.5.2",
