--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "sass": "^1.38.2",
         "sass-loader": "^12.1.0",
         "select2": "^4.1.0-rc.0",
+        "tom-select": "^2.0.0-rc.4",
         "vue": "^2.6.14",
         "vue-loader": "^15.9.8",
         "vue-router": "^3.5.2",
