--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -25,12 +25,14 @@ security:
       provider: app_user_provider
       json_login:
         check_path: api_platform_login
+        username_path: username
+        password_path: password
       custom_authenticator: App\Security\LoginFormAuthenticator
       logout:
         path: /logout
-#        invalidate_session: false
+        #        invalidate_session: false
         # where to redirect after logout
-#        target: home
+      #        target: home
 
       # activate different ways to authenticate
       # https://symfony.com/doc/current/security.html#firewalls-authentication
