--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "vue-template-compiler": "^2.6.14",
         "vuetify": "^2.5.8",
         "vuetify-loader": "^1.7.3",
-        "vuex": "^3.6.2"
+        "vuex": "^3.6.2",
+        "vuex-persistedstate": "^4.1.0"
     }
 }
